# casual-physics-for-vehicles

./: .gitignore  Doxyfile  README.md  makefile  meson.build  parametersExample.json
.github/workflows/: main.yml
c#/Assets/: fiz.cs
c#/Assets/Scenes/: SampleScene.unity  yugo.fbx
c#/Demo/: Demo.sln
c#/Demo/Demo/: Demo.csproj  Program.cs
c#/MainEngineWrap/: MainEngineWrap.sln
c#/MainEngineWrap/MainEngineWrap/: Brake.cs  MainEngine.cs  MainEngineWrap.csproj  MyClass.cs  VehicleEngine.cs  cpv.csproj
c#/MainEngineWrap/MainEngineWrap/Properties/: AssemblyInfo.cs
c#/cpv/: .gitignore  cpv.sln
c#/cpv/cpv/: Brake.cs  EmptyClass.cs  MainEngine.cs  Transmission.cs  VehicleEngine.cs  cpv.csproj
c#/cpv/cpv/Common/: Common.cs
c#/cpv/cpv/Core/: FunctionCurve2.cs  FunctionCurve3.cs  Vector2.cs  Vector3.cs
c#/cpv/cpv/Properties/: AssemblyInfo.cs
c#/cpv/cpv/core/: FunctionCurve2.cs  FunctionCurve3.cs  Vector2.cs  Vector3.cs
docs/: conf.py  index.rst  requirements.txt
src/: meson.build
src/cpv/: meson.build
src/cpv/include/: MainEngine.h  common.h  meson.build
src/cpv/src/: BrakeInterface.cpp  EngineInterface.cpp  FunctionCurve2Interface.cpp  FunctionCurve3Interface.cpp  MainEngine.cpp  MainEngineInterface.cpp  TransmissionInterface.cpp  Vector2Interface.cpp  Vector3Interface.cpp  meson.build
src/cpv/test/: MainEngineTest.cpp  meson.build
src/cpv_calculations/: CMakeLists.txt  meson.build
src/cpv_calculations/core/: CMakeLists.txt  CpvFunctionCurve.h  CpvFunctionCurve2.h  CpvFunctionCurve3.h  CpvVector2.h  CpvVector3.h  main.cpp  meson.build
src/cpv_calculations/core/include/: CpvFunctionCurve2.h  CpvFunctionCurve3.h  meson.build
src/cpv_calculations/core/include/core/: FunctionCurve2.h  FunctionCurve3.h  Vector2.h  Vector3.h
src/cpv_calculations/core/src/: meson.build
src/cpv_calculations/core/test/: CMakeLists.txt  FunctionCurve2Test.hpp  FunctionCurve3Test.hpp  Vector2Test.cpp  Vector2Test.hpp  Vector3Test.cpp  coretest.cpp  meson.build
src/cpv_calculations/physics/: CMakeLists.txt  CpvForce.cpp
src/cpv_calculations/terrain/: CMakeLists.txt
src/cpv_calculations/vehicle/: CMakeLists.txt  meson.build
src/cpv_calculations/vehicle/include/: meson.build
src/cpv_calculations/vehicle/include/vehicle/brake/: Brake.h
src/cpv_calculations/vehicle/include/vehicle/movement/: LateralForceModel.h  LongitudinalForceModel.h  WeightTransfer.h
src/cpv_calculations/vehicle/include/vehicle/powertrain/: Engine.h  Transmission.h
src/cpv_calculations/vehicle/include/vehicle/steering/: Cornering.h
src/cpv_calculations/vehicle/include/vehicle/tyre/: Tyre.h
src/cpv_calculations/vehicle/powertrain/: CpvEngine.cpp  CpvEngine.h
src/cpv_calculations/vehicle/src/: Brake.cpp  Cornering.cpp  Engine.cpp  LateralForceModel.cpp  LongitudinalForceModel.cpp  Transmission.cpp  Tyre.cpp  WeightTransfer.cpp  meson.build
src/cpv_calculations/vehicle/tests/: meson.build
