install_headers('vehicle/brake/AbsBrake.h')
install_headers('vehicle/brake/Brake.h')

install_headers('vehicle/movement/LateralForceModel.h')
install_headers('vehicle/movement/LongitudinalForceModel.h')

install_headers('vehicle/powertrain/Engine.h')
install_headers('vehicle/powertrain/AutomaticTransmission.h')
install_headers('vehicle/powertrain/ManualTransmission.h')

install_headers('vehicle/steering/SimpleSteering.h')

install_headers('vehicle/suspension/RigidSuspension.h')

install_headers('vehicle/tire/RigidTyre.h')
