install_headers('vehicle/brake/AbsBrake.h')
install_headers('vehicle/brake/Brake.h')

install_headers('vehicle/movement/LateralForceModel.h')
install_headers('vehicle/movement/LongitudinalForceModel.h')

install_headers('vehicle/powertrain/Engine.h')
install_headers('vehicle/powertrain/Transmission.h')

install_headers('vehicle/steering/Cornering.h')

install_headers('vehicle/suspension/RigidSuspension.h')

install_headers('vehicle/tyre/Tyre.h')
