testbrake = executable('testbrake', 'BrakeTest.cpp', include_directories: [coreinc, vehicleinc], dependencies: [gtest_dep, gmock_dep, rapidjson_dep])
test('brake tests', testbrake)

testcornering = executable('testcornering', 'CorneringTest.cpp', include_directories: [coreinc, vehicleinc], dependencies: [gtest_dep, gmock_dep, rapidjson_dep])
test('cornering tests', testcornering)

testvehicleengine = executable('testvehicleengine', 'EngineTest.cpp', include_directories: [coreinc, vehicleinc], dependencies: [gtest_dep, gmock_dep, rapidjson_dep])
test('vehicle engine tests', testvehicleengine)

testlateralforce = executable('testlateralforce', 'LateralForceTest.cpp', include_directories: [coreinc, vehicleinc], dependencies: [gtest_dep, gmock_dep, rapidjson_dep])
test('lateral force tests', testlateralforce)

testlongitudinalforce = executable('testlongitudinalforce', 'LongitudinalForceTest.cpp', include_directories: [coreinc, vehicleinc], dependencies: [gtest_dep, gmock_dep, rapidjson_dep])
test('longitudinal force tests', testlongitudinalforce)

testtransmission = executable('testtransmission', 'TransmissionTest.cpp', include_directories: [coreinc, vehicleinc], dependencies: [gtest_dep, gmock_dep, rapidjson_dep])
test('transmission tests', testtransmission)

testtyre = executable('testtyre', 'TyreTest.cpp', include_directories: [coreinc, vehicleinc], dependencies: [gtest_dep, gmock_dep, rapidjson_dep])
test('tyre tests', testtyre)

testweighttransfer = executable('testweighttransfer', 'WeightTransferTest.cpp', include_directories: [coreinc, vehicleinc], dependencies: [gtest_dep, gmock_dep, rapidjson_dep])
test('weight transfer tests', testweighttransfer)
